--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,33 +10,33 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="shortcut icon" href="/static/logo_sin_fondo.png">
-    <title>La Vida</title>
+    <link rel="shortcut icon" href="">
+    <title>Fundación La vida</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="/static/logo_sin_fondo.png" alt="logo"></a>
+              <a class="navbar-brand" href=""><img src="/static/logo_sin_fondo.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#inicio">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Novedades</a>
+                    <a class="nav-link active" aria-current="page" href="#novedades">Novedades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Sobre nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="#nosotros">Sobre nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Nuestro equipo</a>
+                    <a class="nav-link active" aria-current="page" href="#equipo">Nuestro equipo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                    <a class="nav-link active" aria-current="page" href="#contacto">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -44,8 +44,8 @@
         </nav>
     </header>
 
-    <div id="inicio" class="d-flex">
-        <div class="mt-5">
+    <div id="inicio">
+        <div class="mt-5" id="bienvenidos">
             <h2 class="text-center">¡ Bienvenidos !</h2>
             <div class="text">
                 <h5>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. </h5>
@@ -124,7 +124,7 @@
                 <h5>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
             </div>
         </div>
-        <div class="d-flex">
+        <div class="objetivos">
             <div class="card">
                 <img src="/static/9022609_heart_straight_duotone_icon.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -146,6 +146,58 @@
         </div>
     </div>
 
+    <div class="equipo">
+      <div id="equipo">
+        <div>
+          <p class="hiper-text">Nuestro equipo</p>
+          <h2>Consejo Administrativo</h2>
+          <div class="members">
+            <div class="card">
+              <img src="/static/9022927_user_circle_duotone_icon.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h6 class="text-center card-text">Lic. Analia Lorena Barbaro</h6>
+              </div>
+            </div>
+            <div class="card">
+              <img src="/static/9022927_user_circle_duotone_icon.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h6 class="text-center card-text">Lic. Viviana Edit Escurdia</h6>
+              </div>
+            </div>
+            <div class="card">
+              <img src="/static/9022927_user_circle_duotone_icon.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h6 class="text-center card-text">Lic. Mario Daniel Rodriguez</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="pic-grupo">
+        <img src="/static/8159105_group_collegues_friends_people_gather_icon.png" alt="">
+      </div>
+    </div>
+
+    <footer id="contacto">
+      <div class="text-center">
+        <h2>Contacto</h2>
+        <p>Ponte en contacto con nosotros</p>
+        <div class="d-flex" id="correo">
+          <img src="/static/9022421_envelope_duotone_icon.png" alt="">
+          <h6>fundacionlavida.org@gmail.com</h6>
+        </div>
+        <div id="telefono">
+          <img src="/static/9022717_phone_duotone_mobile_communication_icon.png" alt="">
+          <h6>376 427-9382</h6>
+          <img src="/static/9022717_phone_duotone_mobile_communication_icon.png" alt="">
+          <h6>376 427-9382</h6>
+          <img src="/static/9022717_phone_duotone_mobile_communication_icon.png" alt="">
+          <h6>376 427-9382</h6>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="/static/main.js"></script>
 </body>
 </html>
